--- a/dev/config.yaml
+++ b/dev/config.yaml
@@ -85,8 +85,8 @@ workspaces:
     eks:
       # - cluster: []
       - cluster: main
-        cluster_version: 1.32
-        instance_types: ["m6i.xlarge", "m5.xlarge", "m5n.2xlarge", "m5zn.3xlarge"]
+        cluster_version: 1.31
+        instance_types: ["m6i.large", "m5.xlarge", "m5n.2xlarge", "m5zn.3xlarge"]
         capacity_type: SPOT # "SPOT" : "ON_DEMAND"
         min_cluster_size: 1
         max_cluster_size: 3
