--- a/dev/app/manifests/karpenter.yaml
+++ b/dev/app/manifests/karpenter.yaml
@@ -1,18 +1,23 @@
 # Before apply this file, itś mandatory to update EC2NodeClass/ spec:/ role
 # with the correct Karpenter IAM role for your cluster
 # and the subnetSelectorTerms/securityGroupSelectorTerms with the correct tags.
-### Add this IAM access on Karpenter node policy
+### Add this IAM access on KarpenterController policy
 # {
 #     "Effect": "Allow",
-#     "Action": "iam:CreateServiceLinkedRole",
-#     "Resource": "*",
-#     "Condition": {
-#         "StringEquals": {
-#             "iam:AWSServiceName": "spot.amazonaws.com"
-#         }
-#     }
+#     "Action": [
+#         "iam:PassRole"
+#     ],
+#     "Resource": "arn:aws:iam::255440316077:role/karpenter-*"
+# },
+# {
+#     "Effect": "Allow",
+#     "Action": "iam:AddRoleToInstanceProfile",
+#     "Resource": "arn:aws:iam::255440316077:instance-profile/main-eks-cluster-dev-use2*"
 # }
 ###
+# kubectl logs -f -n kube-system -l app.kubernetes.io/name=karpenter -c controller
+# kubectl get nodes -L karpenter.sh/registered
+# kubectl scale deployment inflate --replicas 50
 # kubectl get events -w --sort-by '.lastTimestamp'
 # Register the nodes if needed
 # kubectl label node <node-name> karpenter.sh/registered=true
@@ -24,24 +29,25 @@
 #   --scaling-config minSize=1,maxSize=5,desiredSize=4
 
 ---
-apiVersion: karpenter.k8s.aws/v1beta1
+---
+apiVersion: karpenter.k8s.aws/v1
 kind: EC2NodeClass
 metadata:
   name: default
 spec:
-  # amiFamily required, resolves a default ami and userdata
-  amiFamily: Bottlerocket
-  role: karpenter-main-eks-cluster-dev-use2-2025050523162856080000001b
+  amiSelectorTerms:
+    - alias: bottlerocket@latest
+  role: karpenter-eks-node-group-2025050914303867010000000b
   subnetSelectorTerms:
     - tags:
-        karpenter.sh/discovery: karpenter
+        karpenter.sh/discovery: main-eks-cluster-dev-use2
   securityGroupSelectorTerms:
     - tags:
-        karpenter.sh/discovery: karpenter
+        karpenter.sh/discovery: main-eks-cluster-dev-use2
   tags:
-    karpenter.sh/discovery: karpenter
+    karpenter.sh/discovery: main-eks-cluster-dev-use2
 ---
-apiVersion: karpenter.sh/v1beta1
+apiVersion: karpenter.sh/v1
 kind: NodePool
 metadata:
   name: default
@@ -49,14 +55,13 @@ spec:
   template:
     spec:
       nodeClassRef:
-        apiVersion: karpenter.k8s.aws/v1beta1
+        group: karpenter.k8s.aws
         kind: EC2NodeClass
         name: default
-      #
       requirements:
         - key: "karpenter.k8s.aws/instance-category"
           operator: In
-          values: ["c", "m", "r", "t"]
+          values: ["c", "m", "r"]
         - key: "karpenter.k8s.aws/instance-cpu"
           operator: In
           values: ["4", "8", "16", "32"]
@@ -66,15 +71,8 @@ spec:
         - key: "karpenter.k8s.aws/instance-generation"
           operator: Gt
           values: ["2"]
-        - key: "kubernetes.io/arch"
-          operator: In
-          values: ["arm64", "amd64"] 
-        - key: "karpenter.sh/capacity-type"
-          operator: In
-          values: ["spot"]
   limits:
-    cpu: 100m
-    memory: 128Mi
+    cpu: 1000
   disruption:
     consolidationPolicy: WhenEmpty
     consolidateAfter: 30s
