--- a/dev/config.yaml
+++ b/dev/config.yaml
@@ -6,7 +6,7 @@ workspaces:
       - name: []
         service: {}
       #ECS/EKS uses the private ALB to route traffic to the services.
-      #IF deleted the ECS/EKS will not work.      
+      #IF deleted the ECS will not work.      
       # - name: private #Dont change the private ALB name, it is used on other modules.
       #   internal: true
       #   service:
@@ -29,7 +29,7 @@ workspaces:
       - name: []
         service: {}
       #ECS/EKS uses the public ALB to route traffic to the services.
-      #IF deleted the ECS/EKS will not work.
+      #IF deleted the ECS will not work.
       # - name: public #Dont change the public ALB name, it is used on other modules.
       #   internal: false
       #   service:
@@ -83,23 +83,23 @@ workspaces:
     # This feature supports only one EKS cluster per workspace.
     # If you need to create more than one EKS cluster, you need to create a new workspace.
     eks:
-      # - cluster: []
-      - cluster: main
-        cluster_version: 1.31
-        instance_types: ["m6i.large", "m5.xlarge", "m5n.2xlarge", "m5zn.3xlarge"]
-        capacity_type: SPOT # "SPOT" : "ON_DEMAND"
-        min_cluster_size: 1
-        max_cluster_size: 3
-        desired_cluster_size: 1
-        #enable_node_termination_handler: true
-        enable_cluster_autoscaler: true
-        enable_argocd: true
-        enable_karpenter: true
-        enable_kube_prometheus_stack: true
-        enable_metrics_server: true
-        enable_external_dns: true
-        enable_cert_manager: true
-        enable_ack_addons: false
+      - cluster: []
+      # - cluster: main
+      #   cluster_version: 1.31
+      #   instance_types: ["m6i.large", "m5.xlarge", "m5n.2xlarge", "m5zn.3xlarge"]
+      #   capacity_type: SPOT # "SPOT" : "ON_DEMAND"
+      #   min_cluster_size: 1
+      #   max_cluster_size: 3
+      #   desired_cluster_size: 1
+      #   #enable_node_termination_handler: true
+      #   enable_cluster_autoscaler: true
+      #   enable_argocd: true
+      #   enable_karpenter: true
+      #   enable_kube_prometheus_stack: true
+      #   enable_metrics_server: true
+      #   enable_external_dns: true
+      #   enable_cert_manager: true
+      #   enable_ack_addons: false
     
     s3:
       #- bkt_name: []      
