--- a/dev/shared/config.yaml
+++ b/dev/shared/config.yaml
@@ -3,7 +3,7 @@ workspaces:
   dev:
 
     vpc:
-      - name: bazk-dev
+      - name: vmoura-dev
         cidr_block: 10.102.0.0/16
         public_subnets: ["10.102.0.0/24", "10.102.1.0/24", "10.102.2.0/24"]
         private_subnets: ["10.102.8.0/22", "10.102.12.0/22", "10.102.16.0/22"]
